window: Add wm-class property and notify it when changed.

https://bugzilla.gnome.org/show_bug.cgi?id=649315